--- a/backboneTestServer/server/public/css/styles.css
+++ b/backboneTestServer/server/public/css/styles.css
@@ -18,6 +18,8 @@ body, p { font-size: 24px; }
 	background-color: #F0F0F0;
 	border-top: 1px #888 solid;
 	box-shadow: #AAA 0 -2px 10px;
+	-webkit-box-shadow: #AAA 0 -2px 10px;
+	-o-box-shadow: #AAA 0 -2px 10px;
 }
 
 .controls button {
