Added samples of events creation and handling with reactor implementation

--- a/backboneTestServer/server/public/css/styles.css
+++ b/backboneTestServer/server/public/css/styles.css
@@ -65,3 +65,12 @@ li .edited{
 	font-size: 1em;
 }
 
+.items {
+	float: left;
+	width: 30%;
+}
+
+.content-container {
+	float: left;
+	width: 66%;
+}
